--- a/catalog/transformer/catalog-transformer-xlsx/pom.xml
+++ b/catalog/transformer/catalog-transformer-xlsx/pom.xml
@@ -27,17 +27,17 @@
         <dependency>
             <groupId>org.apache.poi</groupId>
             <artifactId>poi</artifactId>
-            <version>${xlsx.transformer.poi.version}</version>
+            <version>${poi.version}</version>
         </dependency>
         <dependency>
             <groupId>org.apache.poi</groupId>
             <artifactId>poi-ooxml</artifactId>
-            <version>${xlsx.transformer.poi.version}</version>
+            <version>${poi.version}</version>
         </dependency>
         <dependency>
             <groupId>org.apache.poi</groupId>
             <artifactId>poi-ooxml-full</artifactId>
-            <version>${xlsx.transformer.poi.version}</version>
+            <version>${poi.version}</version>
         </dependency>
         <dependency>
             <groupId>org.apache.xmlbeans</groupId>
@@ -47,7 +47,7 @@
         <dependency>
             <groupId>org.apache.poi</groupId>
             <artifactId>poi-scratchpad</artifactId>
-            <version>${xlsx.transformer.poi.version}</version>
+            <version>${poi.version}</version>
         </dependency>
         <dependency>
             <groupId>ddf.catalog.core</groupId>
