--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -41,7 +41,7 @@ jobs:
   # Incremental build for PRs
   incremental-build:
     if: github.event_name == 'pull_request'
-    runs-on: ubuntu-latest-8-cores
+    runs-on: ubuntu-latest
     timeout-minutes: 180
     steps:
       - name: Checkout
@@ -69,7 +69,7 @@ jobs:
   # Full build for master/patch branches
   full-build:
     if: github.event_name != 'pull_request'
-    runs-on: ubuntu-latest-8-cores
+    runs-on: ubuntu-latest
     timeout-minutes: 180
     steps:
       - name: Checkout
@@ -90,7 +90,7 @@ jobs:
     needs: [incremental-build, full-build]
     # Run if either build succeeded (one will be skipped based on event type)
     if: always() && (needs.incremental-build.result == 'success' || needs.full-build.result == 'success')
-    runs-on: ubuntu-latest-8-cores
+    runs-on: ubuntu-latest
     timeout-minutes: 60
     steps:
       - name: Checkout
@@ -114,7 +114,7 @@ jobs:
   dependency-check:
     needs: [incremental-build, full-build]
     if: always() && (needs.incremental-build.result == 'success' || needs.full-build.result == 'success')
-    runs-on: ubuntu-latest-8-cores
+    runs-on: ubuntu-latest
     timeout-minutes: 60
     steps:
       - name: Checkout
@@ -155,7 +155,7 @@ jobs:
   sonarcloud:
     needs: full-build
     if: github.ref == 'refs/heads/master' && github.event_name != 'pull_request'
-    runs-on: ubuntu-latest-8-cores
+    runs-on: ubuntu-latest
     timeout-minutes: 60
     steps:
       - name: Checkout
@@ -197,7 +197,7 @@ jobs:
       (github.ref == 'refs/heads/master' || contains(github.ref, '.x')) &&
       needs.integration-tests.result == 'success' &&
       needs.dependency-check.result == 'success'
-    runs-on: ubuntu-latest-8-cores
+    runs-on: ubuntu-latest
     environment: production
     steps:
       - name: Checkout
