--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -85,11 +85,17 @@ jobs:
       - name: Full build (excluding itests)
         run: mvn clean install $MAVEN_CLI_OPTS -P !itests
 
-  # DDF Core integration tests
+      - name: Run DDF Core integration tests
+        run: |
+          unset JAVA_TOOL_OPTIONS
+          mvn install $MAVEN_CLI_OPTS \
+            -pl distribution/test/itests/test-itests-ddf-core \
+            -nsu
+
+  # DDF Core integration tests (for PRs)
   integration-tests:
-    needs: [incremental-build, full-build]
-    # Run if either build succeeded (one will be skipped based on event type)
-    if: always() && (needs.incremental-build.result == 'success' || needs.full-build.result == 'success')
+    needs: incremental-build
+    if: github.event_name == 'pull_request' && needs.incremental-build.result == 'success'
     runs-on: ubuntu-latest
     timeout-minutes: 60
     steps:
@@ -102,6 +108,9 @@ jobs:
           java-version: '17'
           distribution: 'temurin'
           cache: maven
+
+      - name: Quick install (skip tests)
+        run: mvn install $MAVEN_CLI_OPTS -DskipStatic=true -DskipTests=true
 
       - name: Run DDF Core integration tests
         run: |
@@ -190,12 +199,12 @@ jobs:
 
   # Deploy artifacts (master and patch branches only, in production)
   deploy:
-    needs: [integration-tests, dependency-check]
+    needs: [full-build, dependency-check]
     if: |
       always() &&
       github.event_name != 'pull_request' &&
       (github.ref == 'refs/heads/master' || contains(github.ref, '.x')) &&
-      needs.integration-tests.result == 'success' &&
+      needs.full-build.result == 'success' &&
       needs.dependency-check.result == 'success'
     runs-on: ubuntu-latest
     environment: production
@@ -247,10 +256,14 @@ jobs:
       - name: Determine build result
         id: result
         run: |
-          if [[ "${{ needs.incremental-build.result }}" == "failure" ]] || \
-             [[ "${{ needs.full-build.result }}" == "failure" ]] || \
-             [[ "${{ needs.integration-tests.result }}" == "failure" ]] || \
-             [[ "${{ needs.dependency-check.result }}" == "failure" ]]; then
+          # Check for failures (skipped jobs are OK)
+          FAILED=false
+          if [[ "${{ needs.incremental-build.result }}" == "failure" ]]; then FAILED=true; fi
+          if [[ "${{ needs.full-build.result }}" == "failure" ]]; then FAILED=true; fi
+          if [[ "${{ needs.integration-tests.result }}" == "failure" ]]; then FAILED=true; fi
+          if [[ "${{ needs.dependency-check.result }}" == "failure" ]]; then FAILED=true; fi
+
+          if [[ "$FAILED" == "true" ]]; then
             echo "status=failure" >> $GITHUB_OUTPUT
           else
             echo "status=success" >> $GITHUB_OUTPUT
