--- a/pom.xml
+++ b/pom.xml
@@ -206,6 +206,7 @@
         <jakarta.activation.version>1.2.2</jakarta.activation.version>
         <jakarta.mail.version>1.6.7</jakarta.mail.version>
         <jasypt.version>1.9.3</jasypt.version>
+	<javax.activation.version>1.2.0</javax.activation.version>
         <javax.annotation-api.version>1.3.5</javax.annotation-api.version>
         <javax.cache.version>1.1.1</javax.cache.version>
         <javax.cache.bundle.version>1.1.1_1</javax.cache.bundle.version>
